#
# Copyright 2023 
#

add_definitions(-fPIC)
set(LIBRTSPCLIENT_VERSION 1.0.1)
set(LIBRTSPCLIENT_NAME rtspclient)

file(GLOB_RECURSE RTSPCLIENT_SOURCE_FILES "*.cpp" "*.cc")
file(GLOB_RECURSE ALL_HEAD "*.hpp" "*.h")

#set(RTSPCLIENT_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/rtspapi.cc)

add_library(${LIBRTSPCLIENT_NAME} SHARED ${RTSPCLIENT_SOURCE_FILES})

target_link_libraries(${LIBRTSPCLIENT_NAME} ${LIVE555_LIBS})

file(GLOB RTSPCLIENT_RELEASE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/rtspapi.h)
set_target_properties(${LIBRTSPCLIENT_NAME} PROPERTIES PUBLIC_HEADER "${RTSPCLIENT_RELEASE_HEADERS}")
set_target_properties(${LIBRTSPCLIENT_NAME} PROPERTIES VERSION ${LIBRTSPCLIENT_VERSION})
set_target_properties(${LIBRTSPCLIENT_NAME} PROPERTIES SOVERSION 1)
